fix z-index

--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -20,7 +20,7 @@ $day-border: 1px solid #e8e9eb;
 			position: fixed;
 			width: 100%;
 			height: 100vh;
-			z-index: 1;
+			z-index: 3;
 			left: 0;
 			top: 0;
 
@@ -56,10 +56,10 @@ $day-border: 1px solid #e8e9eb;
 			.selector-wrapper {
 				@extend .shadow, .p-2, .rounded;
 
+				z-index: 3;
 				position: absolute;
 				bottom: -100px;
 				left: calc((100vw - 320px) / 2);
-				z-index: 1;
 				background: white;
 			}
 
